--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,10 @@
         "slim/slim": "3.*",
         "illuminate/database": "~5.1",
         "monolog/monolog": "^2.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src"
+        }
     }
 }
